Infra-YAMLs/test-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: <TBD>
  namespace: <TBD>
  annotations:    
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"    
spec:  
  rules:    
  - http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: nginx-svc
          servicePort: 80
