Infra-YAMLs/k8s-nwp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: k8s-network-policy
  namespace: k8s-dev
spec:
  podSelector:
    matchLabels:
      app: nginx-deploy-2
  policyTypes:
  - Ingress
  ingress:
  - from:    
    - namespaceSelector:
        matchLabels:
          name: k8s-dev
    - podSelector:
        matchLabels:
          app: nginx-deploy-1
    ports:
    - protocol: TCP
      port: 80
